feat: adiciona grafico atividade 3

--- a/sistemas-operacionais/trabalho-3-plot/bar-graph.html
+++ b/sistemas-operacionais/trabalho-3-plot/bar-graph.html
@@ -9,14 +9,14 @@
 
 <body>
 <div class="container">
-    <div class="item" id="jPqBOjJziOKM" style="width:900px;height:500px;"></div>
+    <div class="item" id="khvoWHsXzZpT" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_jPqBOjJziOKM = echarts.init(document.getElementById('jPqBOjJziOKM'), "white");
-    let option_jPqBOjJziOKM = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":false},"series":[{"name":"Calculo Pi","type":"bar","waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"batata","value":"","label":{"show":true}},{"name":"batata","value":"3.5659","label":{"show":true}},{"name":"batata","value":"2.0353","label":{"show":true}},{"name":"batata","value":"0.8761","label":{"show":true}},{"name":"batata","value":"0.4389","label":{"show":true}},{"name":"batata","value":"0.2212","label":{"show":true}}]}],"title":{"text":"Tempo X Número de Threads"},"tooltip":{"show":false},"xAxis":[{"name":"Threads","data":["","1","2","4","8","16"]}],"yAxis":[{"name":"Segundos"}]};
-    goecharts_jPqBOjJziOKM.setOption(option_jPqBOjJziOKM);
+    let goecharts_khvoWHsXzZpT = echarts.init(document.getElementById('khvoWHsXzZpT'), "white");
+    let option_khvoWHsXzZpT = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":false},"series":[{"name":"Calculo Pi 1","type":"line","waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"Série 1","value":"","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 1","value":"3.4499","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 1","value":"1.6185","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 1","value":"0.8239","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 1","value":"0.4400","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 1","value":"0.2125","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0}],"label":{"show":true},"areaStyle":{"opacity":0.2}},{"name":"Calculo Pi 2","type":"line","waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"Série 2","value":"","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 2","value":"5.7551","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 2","value":"2.8793","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 2","value":"1.4293","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 2","value":"0.7017","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0},{"name":"Série 2","value":"0.3588","symbol":"circle","symbolSize":10,"XAxisIndex":0,"YAxisIndex":0}],"label":{"show":true},"areaStyle":{"opacity":0.2}}],"title":{"text":"Tempo X Número de Threads"},"tooltip":{"show":false},"xAxis":[{"name":"Threads","data":["","1","2","4","8","16"]}],"yAxis":[{"name":"Segundos"}]};
+    goecharts_khvoWHsXzZpT.setOption(option_khvoWHsXzZpT);
 </script>
 
 <style>
